Add customerDomain property to CreateRecruitmentRequest schema in recruitment.yaml

--- a/elevato-elivion/paths/recruitment.yaml
+++ b/elevato-elivion/paths/recruitment.yaml
@@ -148,6 +148,12 @@ components:
       allOf:
         - $ref: '#/components/schemas/RecruitmentDetails'
         - $ref: '#/components/schemas/RecruitmentId'
+        - type: object
+          properties:
+            customerDomain:
+              type: string
+          required:
+            - customerDomain
 
     UpdateRecruitmentRequest:
       allOf:
