--- a/elevato-elivion/elevato-elivion.yaml
+++ b/elevato-elivion/elevato-elivion.yaml
@@ -6,16 +6,20 @@ servers:
   - url: https://cv-assistant.elivion.io
 paths:
   /api/elevato/v1/recruitment:
+# Recruitments
+  /api/elevato/v1/customers/{customerId}/recruitment:
     $ref: './paths/recruitment.yaml#/create-process'
-  /api/elevato/v1/recruitment/{externalRecruitmentProjectId}:
+  /api/elevato/v1/customers/{customerId}/recruitment/{externalRecruitmentProjectId}:
     $ref: './paths/recruitment.yaml#/update-process'
-  /api/elevato/v1/recruitment/{externalRecruitmentProjectId}/candidates:
+
+# Candidates
+  /api/elevato/v1/customers/{customerId}/recruitment/{externalRecruitmentProjectId}/candidates:
     $ref: './paths/recruitment.yaml#/create-candidate'
-  /api/elevato/v1/recruitment/{externalRecruitmentProjectId}/candidates/{externalCandidateId}/file:
+  /api/elevato/v1/customers/{customerId}/recruitment/{externalRecruitmentProjectId}/candidates/{externalCandidateId}/file:
     $ref: './paths/recruitment.yaml#/upload-candidate-file'
-  /api/elevato/v1/recruitment/{externalRecruitmentProjectId}/candidates/{externalCandidateId}/report:
+  /api/elevato/v1/customers/{customerId}/recruitment/{externalRecruitmentProjectId}/candidates/{externalCandidateId}/report:
     $ref: './paths/recruitment.yaml#/get-candidate-report'
-  /api/elevato/v1/recruitment/{externalRecruitmentProjectId}/candidates/{externalCandidateId}:
+  /api/elevato/v1/customers/{customerId}/recruitment/{externalRecruitmentProjectId}/candidates/{externalCandidateId}:
     $ref: './paths/recruitment.yaml#/delete-candidate'
 
 
