--- a/elevato-elivion/elevato-elivion.yaml
+++ b/elevato-elivion/elevato-elivion.yaml
@@ -27,4 +27,15 @@ paths:
   /api/elevato/v1/customers/{customerId}/recruitment/{externalRecruitmentProjectId}/candidates/{externalCandidateId}:
     $ref: './paths/recruitment.yaml#/delete-candidate'
 
+components:
+  securitySchemes:
+    apiKey:
+      type: apiKey
+      in: header
+      name: X-API-KEY
+    customerApiKey:
+      type: apiKey
+      in: header
+      name: X-CUSTOMER-API-KEY
+
 
