Add API key to elivion-elevato.yaml

--- a/elivion-elevato/elivion-elevato.yaml
+++ b/elivion-elevato/elivion-elevato.yaml
@@ -10,4 +10,11 @@ paths:
   /v1/Elivion/CVAssistantResultComplete:
     $ref: './paths/elevato.yaml#/analysis-results'
 
+components:
+  securitySchemes:
+    apiKey:
+      type: apiKey
+      in: header
+      name: X-API-KEY
+
 
