Change path parameters types to integer

--- a/elevato-elivion/paths/recruitment.yaml
+++ b/elevato-elivion/paths/recruitment.yaml
@@ -117,7 +117,8 @@ components:
       in: path
       required: true
       schema:
-        type: string
+        type: integer
+        format: int64
 
   requestBodies:
     CreateRecruitmentRequest:
