--- a/elevato-elivion/paths/customers.yaml
+++ b/elevato-elivion/paths/customers.yaml
@@ -54,7 +54,8 @@ components:
       type: object
       properties:
         customerId:
-          type: string
+          type: integer
+          format: int64
         customerDomain:
           type: string
       required:
