Update customerId type

--- a/elevato-elivion/paths/common-models.yaml
+++ b/elevato-elivion/paths/common-models.yaml
@@ -5,5 +5,5 @@ components:
       in: path
       required: true
       schema:
-        type: integer
-        format: int64
+        type: string
+        format: uuid
