Update createCandidate endpoint to get array of files

--- a/elevato-elivion/paths/recruitment.yaml
+++ b/elevato-elivion/paths/recruitment.yaml
@@ -168,6 +168,12 @@ components:
       properties:
         externalCandidateId:
           type: string
+        files:
+          type: array
+          items:
+            type: string
+            format: binary
+
       required:
         - externalCandidateId
 
