Extract from recruitment.yaml candidates related endpoint to candidates.yaml

--- a/elevato-elivion/paths/common-models.yaml
+++ b/elevato-elivion/paths/common-models.yaml
@@ -7,3 +7,19 @@ components:
       schema:
         type: string
         format: uuid
+
+    externalRecruitmentProjectId:
+      name: externalRecruitmentProjectId
+      in: path
+      required: true
+      schema:
+        type: string
+
+
+    externalCandidateId:
+      name: externalCandidateId
+      in: path
+      required: true
+      schema:
+        type: integer
+        format: int64
