--- a/elevato-elivion/elevato-elivion.yaml
+++ b/elevato-elivion/elevato-elivion.yaml
@@ -19,9 +19,9 @@ paths:
 
 # Candidates
   /api/elevato/v1/customers/{customerId}/recruitment/{externalRecruitmentProjectId}/candidates:
-    $ref: './paths/recruitment.yaml#/create-candidate'
+    $ref: './paths/candidates.yaml#/create-candidate'
   /api/elevato/v1/customers/{customerId}/recruitment/{externalRecruitmentProjectId}/candidates/{externalCandidateId}:
-    $ref: './paths/recruitment.yaml#/delete-candidate'
+    $ref: './paths/candidates.yaml#/delete-candidate'
 
 components:
   securitySchemes:
