Add customerApiKey field to UpdateCustomerRequest schema with UUID format

--- a/elevato-elivion/paths/customers.yaml
+++ b/elevato-elivion/paths/customers.yaml
@@ -55,8 +55,12 @@ components:
       properties:
         customerDomain:
           type: string
+        customerApiKey:
+          type: string
+          format: uuid
       required:
         - customerDomain
+        - customerApiKey
 
     UpdateCustomerRequest:
       type: object
