Update API paths in elevato-elivion.yaml to pluralize recruitments endpoints

--- a/elevato-elivion/elevato-elivion.yaml
+++ b/elevato-elivion/elevato-elivion.yaml
@@ -12,15 +12,15 @@ paths:
     $ref: './paths/customers.yaml#/update-customer'
 
 # Recruitments
-  /api/elevato/v1/customers/{customerId}/recruitment:
+  /api/elevato/v1/customers/{customerId}/recruitments:
     $ref: './paths/recruitment.yaml#/create-process'
-  /api/elevato/v1/customers/{customerId}/recruitment/{externalRecruitmentProjectId}:
+  /api/elevato/v1/customers/{customerId}/recruitments/{externalRecruitmentProjectId}:
     $ref: './paths/recruitment.yaml#/update-process'
 
 # Candidates
-  /api/elevato/v1/customers/{customerId}/recruitment/{externalRecruitmentProjectId}/candidates:
+  /api/elevato/v1/customers/{customerId}/recruitments/{externalRecruitmentProjectId}/candidates:
     $ref: './paths/candidates.yaml#/create-candidate'
-  /api/elevato/v1/customers/{customerId}/recruitment/{externalRecruitmentProjectId}/candidates/{externalCandidateId}:
+  /api/elevato/v1/customers/{customerId}/recruitments/{externalRecruitmentProjectId}/candidates/{externalCandidateId}:
     $ref: './paths/candidates.yaml#/delete-candidate'
 
 components:
