Add X-CUSTOMER-API-KEY security scheme to elivion-elevato.yaml. Require customerApiKey for reportAnalysisProblem and submitCompleteAnalysisResults operations.

--- a/elivion-elevato/elivion-elevato.yaml
+++ b/elivion-elevato/elivion-elevato.yaml
@@ -16,5 +16,9 @@ components:
       type: apiKey
       in: header
       name: X-API-KEY
+    customerApiKey:
+      type: apiKey
+      in: header
+      name: X-CUSTOMER-API-KEY
 
 
