Correct CreateCandidateRequest content type to multipart/form-data in candidates.yaml.

--- a/elevato-elivion/paths/candidates.yaml
+++ b/elevato-elivion/paths/candidates.yaml
@@ -38,7 +38,7 @@ components:
     CreateCandidateRequest:
       required: true
       content:
-        application/json:
+        multipart/form-data:
           schema:
             $ref: '#/components/schemas/CreateCandidateRequest'
 
