Add name field to RecruitmentDetails schema in recruitment.yaml

--- a/elevato-elivion/paths/recruitment.yaml
+++ b/elevato-elivion/paths/recruitment.yaml
@@ -54,6 +54,8 @@ components:
     RecruitmentDetails:
       type: object
       properties:
+        name:
+          type: string
         shortDescription:
           type: string
         duties:
